--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <section class="quote-section">
       <h1 class="quote-title">Advice #</h1>
       <p class="quote-text">Get Advice 👇🏽</p>
-      <img src="images/pattern-divider-mobile.svg" alt="" srcset="images/pattern-divider-desktop.svg 600w">
+      <img src="images/pattern-divider-mobile.svg" alt="" 
+        srcset="images/pattern-divider-desktop.svg 600w"
+        sizes="(min-width: 600px) 50vw, 100vw">
+      
       <button id="get-quote" aria-label="get quote"><img src="images/icon-dice.svg" alt=""></button>
     </section>
   </main>
