--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       <h1 class="quote-title">Advice #</h1>
       <p class="quote-text">Get Advice 👇🏽</p>
       <img src="images/pattern-divider-mobile.svg" alt="" srcset="images/pattern-divider-desktop.svg 600w">
-      <button id="get-quote" aria-label="get quote"><img src="images/icon-dice.svg" alt=""></button>
+      <button id="get-quote" aria-label="get quote">
+        <img src="images/icon-dice.svg" alt="">
+      </button>
     </section>
   </main>
 
